--- a/src/components/CardSobre/CardSobre.module.scss
+++ b/src/components/CardSobre/CardSobre.module.scss
@@ -1,20 +1,31 @@
 .container {
-  background-color: rgb(192, 192, 233);
+  background-color: #0E0E1B;
   min-width: 300px;
   border-radius: 10px;
   height: 30vh;
   cursor: pointer;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   .containerCard {
     max-width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    color: white;
     .card {
       margin-top: 40px;
       .iconCard {
         text-align: center;
         font-size: 35px;
+        color: #b16940;
+        &:hover{
+
+          color: #b16940;
+        }
+      }
+
+      .textCard{
+        font-weight: 400;
+        text-transform: uppercase;
       }
     }
   }
