--- a/src/components/CardSobre/CardSobre.module.scss
+++ b/src/components/CardSobre/CardSobre.module.scss
@@ -1,10 +1,14 @@
 .container {
-  background-color: #0E0E1B;
+  background-color: #0e0e1b;
   min-width: 300px;
   border-radius: 10px;
   height: 30vh;
   cursor: pointer;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+
+  &:hover {
+    border-bottom: 6px solid #b16940;
+  }
   .containerCard {
     max-width: 300px;
     display: flex;
@@ -17,13 +21,9 @@
         text-align: center;
         font-size: 35px;
         color: #b16940;
-        &:hover{
-
-          color: #b16940;
-        }
       }
 
-      .textCard{
+      .textCard {
         font-weight: 400;
         text-transform: uppercase;
       }
