--- a/src/components/Sobre/Sobre.module.scss
+++ b/src/components/Sobre/Sobre.module.scss
@@ -3,7 +3,7 @@ $color-orange: #b16940;
 .containerSobre {
   background-color: #e5e6e7;
   height: 100vh;
-
+  width: 100%;
   .container {
     width: 100%;
     // margin: 0px 30px 0px 30px;
