--- a/src/components/CardSobre/CardSobre.module.scss
+++ b/src/components/CardSobre/CardSobre.module.scss
@@ -1,16 +1,18 @@
 .container {
   background-color: #0e0e1b;
-  min-width: 300px;
+  min-width: 350px;
+  width: 100%;
   border-radius: 10px;
-  height: 30vh;
+  height: 200px;
+
   cursor: pointer;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  // min-width: 550px;
 
   &:hover {
     border-bottom: 6px solid #b16940;
   }
   .containerCard {
-    // max-width: 300px;
     width: 100%;
     display: flex;
     justify-content: center;
