--- a/src/components/ProjetosDestaques/ProjetosDestaques.module.scss
+++ b/src/components/ProjetosDestaques/ProjetosDestaques.module.scss
@@ -1,8 +1,25 @@
+.container {
+  background-color: #e5e6e7;
+  width: 100%;
+ 
+    
+  .title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    h2 {
+      font-weight: 400;
+      border-bottom: 2px solid #b16940;
+      letter-spacing: 1px;
+        text-transform: uppercase;
+        margin-top: 30px;
+        margin-bottom: 50px;
 
-
-.container{
-    background-color: #E5E6E7;
-    height: 100vh;
-    width: 100%;
+        span{
+            color: #b16940;
+            font-size: 32px;
+        }
+    }
+  }
 }
-
