--- a/src/components/CardSobre/CardSobre.module.scss
+++ b/src/components/CardSobre/CardSobre.module.scss
@@ -1,24 +1,25 @@
 .container {
+
+  
   background-color: #0e0e1b;
   min-width: 350px;
-  width: 100%;
   border-radius: 10px;
   height: 200px;
-
   cursor: pointer;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  // min-width: 550px;
-
+  
   &:hover {
     border-bottom: 6px solid #b16940;
   }
   .containerCard {
     width: 100%;
     display: flex;
+    
     justify-content: center;
     align-items: center;
     color: white;
     .card {
+      
       // width: 100%;
       margin-top: 40px;
       .iconCard {
@@ -32,5 +33,12 @@
         text-transform: uppercase;
       }
     }
+  }
+  
+}
+@media only screen and (max-width: 600px) {
+  .container {
+   margin-top: 30px;
+
   }
 }
