--- a/src/components/Sobre/Sobre.module.scss
+++ b/src/components/Sobre/Sobre.module.scss
@@ -7,6 +7,7 @@ $color-orange: #b16940;
   .container {
     width: 100%;
     // margin: 0px 30px 0px 30px;
+    
     padding: 20px;
 
     .titleSobre {
@@ -46,13 +47,19 @@ $color-orange: #b16940;
 
     .cardsDoSobre {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-around;
       margin-top: 50px;
     }
-
+    
+    
     .borda {
       margin-top: 140px;
       border-bottom: 1px solid rgb(192, 192, 192);
     }
+  }
+  
+  @media only screen and (max-width: 600px) {
+   
   }
 }
