--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,13 @@
+$color-hover:#F27405;
+$color-text:#BFBFBF;
+$bg-color:#0e0e1b;
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: #0e0e1b;
-  color: #e5e6e7;
+  background-color: $bg-color;
+  color: $color-text;
   padding-bottom: 30px;
   font-family: Arial, Helvetica, sans-serif;
 
@@ -17,10 +20,10 @@
       margin-top: 100px;
       font-size: 35px;
       a {
-        color: #e5e6e7;
+        color:$color-text;
         padding: 15px;
         &:hover {
-          color: #b16940;
+          color: $color-hover;
         }
       }
     }
@@ -30,11 +33,11 @@
       justify-content: center;
       align-items: center;
       a {
-        color: #e5e6e7;
+        color: $color-text;
         margin: 15px;
         margin-top: 20px;
         &:hover {
-          color: #b16940;
+          color: $color-hover;
         }
       }
     }
