--- a/src/components/Sobre/Sobre.module.scss
+++ b/src/components/Sobre/Sobre.module.scss
@@ -1,8 +1,7 @@
-$color-orange: #b16940;
+$color-orange:#F27405;
 
 .containerSobre {
   background-color: #e5e6e7;
-  height: 100vh;
   width: 100%;
   .container {
     width: 100%;
