--- a/src/components/ProjetosImg/ProjetosImg.module.scss
+++ b/src/components/ProjetosImg/ProjetosImg.module.scss
@@ -14,7 +14,7 @@ $color-white:#BFBFBF;
     .sectionDisplay {
       display: flex;
       justify-content: center;
-        margin-left: 10px;
+      margin-left: 10px;
       align-items: center;
       width: 100%;
       .imgContainer {
@@ -22,7 +22,7 @@ $color-white:#BFBFBF;
       }
 
       .content {
-        
+       
         .star {
           display: flex;
           align-items: center;
@@ -90,84 +90,60 @@ $color-white:#BFBFBF;
 
 @media only screen and (max-width: 600px) {
 
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  $color-orange:#F27405;
+$bg-color:#0e0e1b;
+$color-white:#BFBFBF;
+.container {
+  display: block;
+  margin: 0;
+  padding: 0;
   .containerSection {
+      display: block;
+      
     
-    // width: 100%;
-    border-bottom: 1px solid rgb(192, 192, 192);
-    // margin-left:58px;
     .sectionDisplay {
       display: flex;
-      justify-content: center;
-      //   margin-left: 10px;
-      align-items: center;
-      // width: 100%;
+      width: 100%;
+      margin-left: 0;
+      
       .imgContainer {
-        width: 280px;
+          display: block;
+        
+          // background-color: #F27405;
+          width: 200px;
       }
 
       .content {
-        // margin-left: 100px;
+        display: block;
+        // background-color: #F27405;
         .star {
-          display: flex;
-          align-items: center;
+          display: block;
 
           .icon {
-            color: $color-orange;
-            font-size: 30px;
-            // margin-right: 15px;
+            
+            
           }
 
           h2 {
-            border-bottom: 2px solid $color-orange;
-            font-size: 23px;
-            text-transform: uppercase;
-            font-weight: 400;
-            // margin-left: 10px;
+            
           }
         }
 
         p {
-          // max-width: 300px;
-          line-height: 32px;
-          font-size: 17px;
-          font-weight: 300;
-          // margin-top: 30px;
+          display: block;
         }
 
         .btns {
-          display: flex;
+          
           a {
-            text-decoration: none;
+            
           }
           .button {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            // margin-top: 60px;
-            background-color: $bg-color;
-            // padding: 10px;
-            border-radius: 10px;
-            // width: 80px;
-            color: $color-white;
-            box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+            display: block;
           }
 
           .buttonGit {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            // margin-top: 60px;
-            background-color: $bg-color;
-            // padding: 10px;
-            border-radius: 10px;
-            // width: 80px;
-            color: $color-white;
-            // margin-left: 30px;
-            box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+            margin-left: 0;
           }
         }
       }
@@ -175,6 +151,8 @@ $color-white:#BFBFBF;
   }
   
 }
-    
-    
+  
 }
+    
+    
+
